projects/compiler/test/parser/grouped_error_eof.out
Error at %FILE_NAME%:1:14
Unexpected end of file:
  |  (12 * (3 + 4)
                  ^